Modify README.md and index.html,add layout.css for lab 1 step2

--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -1,8 +1,11 @@
 <html></html>
+    <link rel="stylesheet" href="layout.css">
 
 <head>
     <title>Web Layout Exercise</title>
 </head>
+
+    
 
 <body>
     <header>Header</header>
