change color and messenge

--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -8,10 +8,10 @@
     
 
 <body>
-    <header>Header</header>
+    <header>Welcome To Website :))</header>
     <nav>Nav</nav>
-    <article>Article <span>text1</span> 
-        <span>text2</span></article>
+    <article>9/24/2024 <span>Theethat</span> 
+        <span>Boonprasertchai</span></article>
     <div>Ads</div>
     <footer>Footer</footer>
 </body>
